--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,10 @@
     "font-awesome": "~4.3.0",
     "angular-ui-router-tabs": "~1.4.2",
     "Hover": "~2.0.2",
-    "satellizer": "~0.9.4"
+    "satellizer": "~0.9.4",
+    "angular-countrycodes": "~1.0.0",
+    "flag-css": "~0.0.1",
+    "angular-sanitize": "~1.3.15",
+    "selectize": "~0.8.5"
   }
 }
