--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,8 @@
     "angular-countrycodes": "~1.0.0",
     "flag-css": "~0.0.1",
     "angular-sanitize": "~1.3.15",
-    "selectize": "~0.8.5"
+    "selectize": "~0.8.5",
+    "phoneformat.js": "~1.0.1",
+    "animate.css": "~3.2.6"
   }
 }
